# financeAI

./: .gitignore  .pre-commit-config.yaml  README.md  go.mod  main.py  manual.py  pyproject.toml  requirements.txt
cmd/financeAI/: main.go  temp_example.go
tutorials/: README.md
tutorials/five/: main.go
tutorials/four/data-access/: go.mod  go.sum  main.go
tutorials/gowiki/: wiki.go
tutorials/nine/: README.md
tutorials/seven/: main.go
tutorials/seven/testdata/fuzz/FuzzReverse/: 9783172430fa24ae  f1360319474dc1f9
tutorials/three/workspace/example/: README.md
