[project]
name = "financeAI"
version = "0.1.0"
description = "AI for finance"
authors = [
    {name = "Jonah Jacobsen"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "gspread>=6.1.3",
    "google-auth>=2.35.0",
]
requires-python = ">=3.12.6"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "invoke>=2.2.0",
    "ipython>=8.28.0",
    "pre-commit>=3.8.0",
    "black==23.9.1",
]
